--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -10328,7 +10328,8 @@ En este capítulo se definen las prácticas de gestión de proyecto aplicadas
  con una estimación post-desarrollo.
  La estimación tardía se debe a la restricción de tiempo impuesta desde
  un principio: el proyecto sólo contaba con tres meses para el desarrollo,
- de manera que una estimación previa hubiera sido hasta cierto punto fútil.
+ de manera que una estimación previa hubiera sido hasta cierto punto fútil,
+ pues no existía la posibilidad de extenderlo más allá de ese límite.
 \end_layout
 
 \begin_layout Section
@@ -10368,10 +10369,13 @@ acotan
 \begin_layout Standard
 El autor debe recalcar que esta sección se ha escrito luego de completar
  el ciclo de desarrollo, por lo que a continuación se describe el ámbito
- actual -y no el inicial-, de ahí el nivel de detalle.
+ práctico actual -y no el teórico inicial-, de ahí el nivel de detalle.
  Una descripción del ámbito inicial sería redundante.
- Siguiendo, pues, la práctica de narrar el ámbito de la aplicación, el de
- este proyecto se puede establecer de la siguiente manera:
+\end_layout
+
+\begin_layout Standard
+Siguiendo, la práctica de narrar el ámbito de la aplicación, el de este
+ proyecto se puede establecer de la siguiente manera:
 \end_layout
 
 \begin_layout Quotation
@@ -10386,23 +10390,22 @@ panel de control
 interfaz de programación de aplicaciones
 \emph default
  para registrar usuarios individualmente o en grupo.
- Puesto que una adición múltiple de usuarios puede ser costosa, respecto
- al tiempo, los implementadores pueden optar por utilizar una llamada asíncrona
+ Puesto que una adición múltiple de usuarios puede ser costosa, en cuanto
+ a latencia, los implementadores pueden optar por utilizar una llamada asíncrona
  al servicio, la cual confirmará mediante correo electrónico que los usuarios
  fueron agregados.
  En cualquier caso, para estas operaciones, los implementadores deberán
- autenticarse utilizando las credenciales provistas: clave de aplicación,
- nombre de usuario y contraseña.
+ autenticarse utilizando las credenciales provistas al registrarse: clave
+ de aplicación, nombre de usuario y contraseña.
  El servicio contestará mediante HTTP con una respuesta con código 401 si
  la autenticación falla o con una respuesta con código 200 y cuerpo codificado
  en JSON con un mensaje de éxito si la agregación resulta o fracaso si hubo
  un error interno o se excedió el límite de usuarios permitido: por cuestiones
  de almacenamiento, el servicio establecerá un límite de usuarios a las
  aplicaciones que lo utilicen.
- Asimismo, el servicio ofrece una llamada para eliminar usuarios (que se
- comporta igual que la de agregación, incluso en cuanto a la necesidad de
- autenticación) y otra para ver los usuarios que se han registrado, para
- ésta, sin embargo, sólo la clave de aplicación es necesaria.
+ Asimismo, el servicio ofrece una llamada para eliminar usuarios y otra
+ para ver los usuarios que se han registrado, para éstas también es necesaria
+ autenticación.
 \begin_inset Newline newline
 \end_inset
 
@@ -10417,14 +10420,14 @@ widget
 \emph on
 widget
 \emph default
- las opciones que se deseen.
- Si no desean utilizar el widget -o no pueden, por no ser web la aplicación-
- deberán implementar métodos que hagan las llamadas al servicio de recomendación
- y lo interpreten: para obtener recomendaciones, la llamada correspondiente
- deberá incluir la clave de aplicación y el contexto local en forma de texto;
- el servidor contestará con una respuesta 404 (página no encontrada) si
- la clave provista no es válida o con una respuesta 403 (solicitud inválida)
- si, en caso de ser una llamada 
+ las opciones de configuración que se deseen.
+ Si no se desea utilizar el widget -o no es posible, al no implementarlo
+ en un documento html- deberán implementar métodos que hagan las llamadas
+ al servicio de recomendación y lo interpreten: para obtener recomendaciones,
+ la llamada correspondiente deberá incluir la clave de aplicación y el contexto
+ local en forma de texto; el servidor contestará con una respuesta 404 (página
+ no encontrada) si la clave provista no es válida o con una respuesta 400
+ (solicitud inválida) si, en caso de ser una llamada 
 \emph on
 AJAX
 \emph default
@@ -10432,22 +10435,22 @@ AJAX
  javascript válido.
  En cualquier otro caso, el servidor contestará con una respuesta con código
  200 y un contenido codificado en JSON con un mensaje de error si el usuario
- no existe o el contenido no se provee o con un conjunto de términos clave
- encontrados y recomendaciones (incluyendo las 
+ no existe o el contenido no se provee, o con un conjunto de términos clave
+ encontrados y recomendaciones (las cuales incluyen la 
 \emph on
 url
 \emph default
- de la hipermedia, un resumen, código para retroalimentación y la relevancia)
- si la solicitud es correcta.
- Asimismo, se provee la llamada a actualizar el perfil, que se comporta
- de manera similar a la de obtener recomendaciones, mas recibe un parámetro
+ para cada documento de hipermedia, un resumen, código para retroalimentación
+ y la relevancia respecto a los términos clave) si la solicitud es correcta.
+ También se provee una llamada a actualizar el perfil, que se comporta de
+ manera similar a la de obtener recomendaciones, mas recibe un parámetro
  más: los códigos de documentos elegidos como retroalimentación.
- La actualización del perfil es asíncrona, por lo que la llamada a esta
- función sólo devuelve que la tarea de actualización fue puesta en la cola
- de prioridad, y no necesariamente garantiza la actualización; esto se debe
- a que el proceso de evolución de perfil es relativamente largo y un procesamien
-to síncrono ralentizaría innecesariamente la aplicación implementadora (dado
- que es un componente secundario de la misma).
+ La actualización del perfil es asíncrona, por lo que un retorno de éxito
+ en la llamada a esta función sólo garantiza que la tarea de actualización
+ fue puesta en la cola de prioridad, y no la actualización misma; esto se
+ debe a que el proceso de evolución de perfil es relativamente largo y un
+ procesamiento síncrono ralentizaría innecesariamente la aplicación implementado
+ra (puesto que es un componente secundario de la misma).
 \end_layout
 
 \begin_layout Standard
@@ -10466,19 +10469,18 @@ key "Pressman2006"
 Personal: Dada la naturaleza de este proyecto, solamente se cuenta con el
  autor para el desarrollo de software.
  Para la configuración inicial de recursos externos (como el servidor web
- y de base de datos), se habrá de solicitar apoyo a la facultad o el encargado
- del laboratorio asignado a los estudiantes de ingeniería en sistemas computacio
-nales.
+ y de base de datos), se solicitó apoyo a la facultad o el encargado del
+ laboratorio de ingeniería en sistemas computacionales.
 \end_layout
 
 \begin_layout Description
 Entorno: este se detallará más adelante (entre los requisitos no funcionales
- de la etapa de análisis), mas se puede establecer que se requerirá de equipos
- con un sistema operativo linux tanto para desarrollo como para producción;
- asimismo, se requerirá de al menos 10 Gb de almacenamiento y al menos 1
- Gb de memoria de acceso aleatorio debido a la cantidad de datos en forma
- de texto libre a ser procesados.
- Por último, se requerirá de conexión a internet y suficiente ancho de banda
+ del análisis), mas se puede establecer que se requiere de equipos con un
+ sistema operativo linux tanto para desarrollo como para producción; asimismo,
+ se requieren al menos 10 Gb de almacenamiento y al menos 1 Gb de memoria
+ de acceso aleatorio debido a la cantidad de datos en forma de texto libre
+ a ser procesados.
+ Por último, es necesaria conexión a internet y suficiente ancho de banda
  como para procesar con el mínimo de latencia las solicitudes al servicio.
 \end_layout
 
@@ -10487,20 +10489,20 @@ Software
 \begin_inset space ~
 \end_inset
 
-reutilizable: para el proyecto se utilizará un 
+reutilizable: se utiliza un 
 \emph on
 framework
 \emph default
- de desarrollo web que se encargue de tareas de bajo nivel como el direccionamie
-nto de 
+ de desarrollo web que se encarga de tareas de bajo nivel como el direccionamien
+to de 
 \emph on
 urls
 \emph default
- y la interpretación y codificación de la comunicación HTTP, luego, se requerirá
- software pre-existente para las siguientes tareas: indexación y búsqueda
+ y la interpretación y codificación de la comunicación HTTP, luego, se requerier
+e software pre-existente para las siguientes tareas: indexación y búsqueda
  de documentos para recomendación, entrenamiento del clasificador de categorías
  y extracción de términos clave.
- Se deberá desarrollar software nuevo para el manejo de solicitudes al servicio,
+ Se desarrolló software nuevo para el manejo de solicitudes al servicio,
  la implementación del widget, la obtención de la colección de software
  documental, el registro de aplicaciones, la creación, evolución y uso de
  los perfiles y la administración de las tareas de extracción automática,
@@ -10530,9 +10532,9 @@ key "Dawson2002"
  y finalización o cierre).
  Como ya se explicó, se prefirió seguir un proceso evolutivo asimilable
  al desarrollo conducido por características, con iteraciones rápidas, cambios
- de los requerimientos y pruebas a nivel de característica.
- En cuanto a la etapa de planificación, sin embargo, se siguieron los lineamient
-os establecidos en el ya citado libro de 
+ progresivos de los requerimientos y pruebas a nivel de característica;
+ teniendo en cuenta, a la vez, los lineamientos establecidos en el ya citado
+ libro de 
 \begin_inset CommandInset citation
 LatexCommand citet
 key "Dawson2002"
@@ -10541,7 +10543,7 @@ key "Dawson2002"
 
 .
  No obstante, la planificación, se debe confesar, se hizo a grandes rasgos
- (a nivel de objetivos e hitos) dejando los detalles 
+ (a nivel de objetivos e hitos): dejando los detalles 
 \emph on
 sobre la marcha
 \emph default
@@ -10569,23 +10571,23 @@ características
 
 \begin_deeper
 \begin_layout Enumerate
-Obtención de colección documental y ontología
+Obtención de colección documental y ontología.
 \end_layout
 
 \begin_layout Enumerate
-Implementación del componente de búsqueda
+Implementación del componente de búsqueda.
 \end_layout
 
 \begin_layout Enumerate
-Implementación del componente de perfilado
+Implementación del componente de perfilado.
 \end_layout
 
 \begin_layout Enumerate
-Implementación del servicio
+Implementación del servicio.
 \end_layout
 
 \begin_layout Enumerate
-Pruebas generales
+Pruebas generales.
 \end_layout
 
 \end_deeper
@@ -10602,8 +10604,8 @@ tiempos: esta fue quizá la etapa más liberalmente ejecutada del proyecto:
  para cada característica se consideró un máximo de dos semanas, de modo
  que se pudieran cumplir los tres meses (dejando un par de semanas para
  cualquier contingencia).
- Tratando de que las tareas incluidas dentro de cada característica no excediese
-n una semana en su ejecución.
+ Tratando de que, por su parte, las tareas incluidas dentro de cada característi
+ca no excediesen una semana en su ejecución.
 \end_layout
 
 \begin_layout Description
@@ -10616,7 +10618,7 @@ de
 \end_inset
 
 hitos: la culminación y pruebas superficiales de cada característica se
- consideraron hitos.
+ consideraron hitos, con la concurrente escritura de la memoria descriptiva.
 \end_layout
 
 \begin_layout Description
@@ -10642,8 +10644,8 @@ planificación
 
 temporal: una vez identificados los hitos y las tareas necesarias para llevar
  a cabo cada objetivo, se utilizó un diagrama de Gantt para identificar
- qué tareas dependían de otras y así distribuir el tiempo de los tres meses
- de desarrollo.
+ qué tareas dependían de otras y cuales podían realizarse en paralelo, distribuy
+endo los tres meses de desarrollo.
 \end_layout
 
 \begin_layout Description
@@ -10661,8 +10663,8 @@ la
 
 marcha: conforme se avanzó en el desarrollo, el diagrama se fue refinando
  conforme las tareas se cumplían -dado que muchas se lograron antes de lo
- estimado y otras después, dando como resultado el diagrama que se presenta
- en el anexo 
+ estimado y otras después, dando como resultado final el diagrama que se
+ presenta en el anexo 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "cha:project-plan"
@@ -10928,7 +10930,7 @@ Servicio Web
 \begin_inset Text
 
 \begin_layout Plain Layout
-2,712
+6,561
 \end_layout
 
 \end_inset
@@ -10937,7 +10939,7 @@ Servicio Web
 \begin_inset Text
 
 \begin_layout Plain Layout
-6.84
+17.30
 \end_layout
 
 \end_inset
@@ -10946,7 +10948,7 @@ Servicio Web
 \begin_inset Text
 
 \begin_layout Plain Layout
-5.19
+7.39
 \end_layout
 
 \end_inset
@@ -10955,7 +10957,7 @@ Servicio Web
 \begin_inset Text
 
 \begin_layout Plain Layout
-1.32
+2.34
 \end_layout
 
 \end_inset
@@ -10964,7 +10966,7 @@ Servicio Web
 \begin_inset Text
 
 \begin_layout Plain Layout
-$ 11, 494
+$ 29,063
 \end_layout
 
 \end_inset
